deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ekart-deployment
  labels:
    app: ekart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ekart
  template:
    metadata:
      labels:
        app: ekart
    spec:
      containers:
      - name: ekart-container
        image: asia-south1-docker.pkg.dev/leafy-chariot-485812-k6/ekart-repo/ekart-app:latest
        ports:
        - containerPort: 8070
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /login
            port: 8070
          initialDelaySeconds: 90
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /login
            port: 8070
          initialDelaySeconds: 120
          periodSeconds: 15
          failureThreshold: 3
