service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekart-service
spec:
  type: LoadBalancer
  selector:
    app: ekart
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8070
