ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ekart-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /login
    
    # --- ಈ ಒಂದು ಹೊಸ ಸಾಲನ್ನು ಮಾತ್ರ ಸೇರಿಸಿ (Add this one new line) ---
    # 200, 302, ಮತ್ತು 404 ಕೋಡ್‌ಗಳನ್ನು 'healthy' ಎಂದು ಪರಿಗಣಿಸು
    alb.ingress.kubernetes.io/success-codes: 200,302,404
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ekart-service
              port:
                number: 8070
